--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "debug": "~2.0.0",
     "yql": "~1.0.2",
     "jade": "~1.6.0"
+  },
+  "engines": {
+    "node": "0.10.26",
+    "npm":  "1.4.3"
   }
 }
