--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "jade": "~1.6.0",
     "linda": "~1.2.0",
     "socket.io-client": "~1.2.0"
+  },
+  "engine": {
+    "node": "v0.10.33",
+    "npm": "1.4.28"
   }
 }
