--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "socket.io-client": "~1.2.0",
-    "yql": "~1.0.2"
+    "yql": "~1.0.2",
+    "request": "~2.48.0"
   },
   "engine": {
     "node": "v0.10.33",
